--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(entrega_tp_1 C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(entrega_tp_1 main.c Board.h Game.h Board.c Game.c)
+add_executable(entrega_tp_1 main.c Board.h Game.h Board.c Game.c CyclesTable.c CyclesTable.h)
 target_link_libraries(entrega_tp_1 pthread)
